--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -16,19 +16,19 @@
 
 {% block body %}
 
-<div style="margin-top: 30px">
+<div class="systems-top">
   <div class="container">
 
   <div class="row" style="">
     <div id="above-tab-content" class="row">
       <!-- Page Title-->
-      <div style="float: left;">
-          <h2 class="control-heading" style="">
-            <a href="{{ project.get_absolute_url }}" style="color: black;">{{ system.root_element.name }}</a> > Selected Components
+      <div class="systems-title">
+          <h2 class="control-heading">
+            <a href="{{ project.get_absolute_url }}" class="systems-link">{{ system.root_element.name }}</a> > Selected Components
           </h2>
       </div>
       <!-- Control Lookup-->
-      <div style="float: right;">
+      <div class="systems-control-lookup">
           <!-- <form id="control-lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
             <input type="text" name="id" placeholder="Enter control id" value="{% if control %}{{ control.id_display|upper }}{% endif %}">
                 <button type="submit" class="btn btn-success">Look up</button>
@@ -38,11 +38,11 @@
   </div><!--/row-->
     <p>&nbsp;</p>
 
-    <div id="tab-content" class="row rows-header" style="">
-        <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3"><span style="font-size: 14pt; font-weight: bold;">Selected Components</div>
+    <div id="tab-content" class="row rows-header">
+        <div id="" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3"><span class="systems-selected-components">Selected Components</div>
     </div>
    {% for component in system.producer_elements %}
-    <div id="tab-content" class="row row-control" style="">
+    <div id="tab-content" class="row row-control">
         <div id="" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
             <a href="/systems/{{ system.id }}/component/{{ component.id }}">{{ component.name }}</a>
         </div>
