--- a/templates/systems/controls_selected.html
+++ b/templates/systems/controls_selected.html
@@ -17,19 +17,19 @@
 
 {% block body %}
 
-<div style="margin-top: 30px">
+<div class="systems-top">
   <div class="container">
 
-  <div class="row" style="">
+  <div class="row">
     <div id="above-tab-content" class="row">
       <!-- Page Title-->
-      <div style="float: left;">
-          <h2 class="control-heading" style="">
-            <a href="{{ project.get_absolute_url }}" style="color: black;">{{ system.root_element.name }}</a> > Selected Controls
+      <div class="systems-title">
+          <h2 class="control-heading">
+            <a href="{{ project.get_absolute_url }}" class="systems-link">{{ system.root_element.name }}</a> > Selected Controls
           </h2>
       </div>
       <!-- Control Lookup-->
-      <div style="float: right;">
+      <div class="systems-control-lookup">
           <form id="control-lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
             <input type="text" name="id" placeholder="Enter control id" value="{% if control %}{{ control.id_display|upper }}{% endif %}">
                 <button type="submit" class="btn btn-success">Look up</button>
@@ -41,7 +41,7 @@
   </div><!--/row-->
     <p>&nbsp;</p>
 
-    <div id="tab-content" class="row rows-header" style="">
+    <div id="tab-content" class="row rows-header">
         <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">Selected controls</div>
         <div id="" class="col-xs-9 col-sm-9 col-md-9 col-lg-9 col-xl-9">&nbsp;</div>
         <div id="" class="col-xs-1 col-sm-1 col-md-1 col-lg-1 col-xl-1">
@@ -52,7 +52,7 @@
         </div>
     </div>
     {% if controls|length < 1 %}
-      <div id="tab-content" class="row row-control" style="">
+      <div id="tab-content" class="row row-control">
         <div id="" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <p>No controls are currently selected for this system.</p>
           <p>FEATURE NOTE: We are automating the assigning of control baselines by system categorization.
@@ -72,7 +72,7 @@
       </div>
     {% else %}
       {% for control in controls %}
-        <div id="tab-content" class="row row-control" style="">
+        <div id="tab-content" class="row row-control">
             <div id="" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
                 <a href="/systems/{{ system.id }}/controls/catalogs/{{ control.oscal_catalog_key }}/control/{{ control.oscal_ctl_id }}">{{ control.get_flattened_oscal_control_as_dict.id_display|upper }}</a>
             </div>
@@ -84,7 +84,7 @@
                 {% if total > 0%}
                   {{ total }} component{{ total|pluralize }}
                 {% else %}
-                  <div style="text-align: center;">
+                  <div class="center-text">
                     &mdash;
                   </div>
                 {% endif %}
