Remove extra bracket so button functions correctly

--- a/templates/project.html
+++ b/templates/project.html
@@ -210,7 +210,7 @@ h3.question-group-title {
               <input type="hidden" name="project" value="{{project.id}}"/>
               <input type="hidden" name="question" value="{{q.question.key}}"/>
               <input type="hidden" name="previous" value="project"/>
-              <a class="btn btn-default" class="action-button">
+              <a class="btn btn-default" class="action-button"
                 href="#" onclick="$(this).parent('form').submit(); return false;">
                 {{q.question.spec.title}} &raquo;
               </a>
