--- a/templates/systems/element_detail_tabs.html
+++ b/templates/systems/element_detail_tabs.html
@@ -124,7 +124,7 @@
     <ul class="nav nav-tabs" role="tablist">
       <li role="presentation" class="active"><a href="#component" aria-controls="component" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-list-alt"></span> Component</a></li>
       <li role="presentation"><a href="#component_controls" aria-controls="component_controls" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-wrench"></span> Component Statements  &nbsp;<div id="common-tab-count">{{ impl_smts|length }}</div></a></li>
-      {% if enable_experimental_opencontrol %}
+      {% if enable_experimental_oscal %}
         <li role="presentation"><a href="#oscal" aria-controls="oscal" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-file"></span> OSCAL </a></li>
       {% endif %}
       {% if enable_experimental_opencontrol %}
@@ -233,7 +233,7 @@
           <div><h3><button type="submit" class="small btn btn-md btn-success" style="color: white;" onclick="add_smt()">Add component statement</button></h3></div>
       </div>
 
-      <!-- Tab panel: combined -->
+      <!-- Tab panel: oscal -->
       {% if enable_experimental_oscal %}
       <div role="tabpanel" class="tab-pane" id="oscal">
         <p id="oscal_download" class="navbar-text navbar-right">
@@ -244,7 +244,7 @@
             Download ...
           </a>
         </p>
-        <div id="combined_smt" class="control-text"><h3>OSCAL (under development)</h3></div>
+        <div id="combined_smt" class="control-text"><h3>OSCAL</h3></div>
         <div style="font-family: monospace; font-size:12px; white-space: pre;">{{ oscal }}</div>
       </div>
       {% endif %}
