--- a/templates/systems/components_selected.html
+++ b/templates/systems/components_selected.html
@@ -28,12 +28,8 @@
             <a href="{{ project.get_absolute_url }}" class="systems-link">{{ system.root_element.name }}</a> > Selected Components
           </h2>
       </div>
-      <!-- Control Lookup-->
-      <div class="systems-control-lookup">
-          <!-- <form id="control-lookup" method="get" action="/controls/" onsubmit="show_control_by_id(); return false;">
-            <input type="text" name="id" placeholder="Enter control id" value="{% if control %}{{ control.id_display|upper }}{% endif %}">
-                <button type="submit" class="btn btn-success">Look up</button>
-          </form> -->
+      <div style="float: right; margin: 0 0.5em 0em 5em;">
+        <button id="component-import-oscal" class="btn btn-success" onclick="show_import_component_modal(); return false;" href="#" ">Import OSCAL Component</button>
       </div>
     </div>
   </div><!--/row-->
@@ -74,6 +70,8 @@
 
   </div>
 </div>
+
+  {% include "components/import-component-modal.html" %}
 
 {{ block.super }}
 {% endblock %}
