started updating automated tests to add related components. Also save_smt didn't work because system_id was never defined. There is an extra cls.browser definition. Remove extra navigation.

--- a/templates/controls/editor.html
+++ b/templates/controls/editor.html
@@ -303,7 +303,7 @@
 
                         </form>
                   <!-- Search for related components -->
-                    <button type="submit" class="small btn btn-sm btn-success" style="color: white;" onclick="show_related_controls({{ system.id }})">Submit for related</button>
+                    <button type="submit" id="add_related_statements" class="small btn btn-sm btn-success" style="color: white;" onclick="show_related_controls({{ system.id }})">Submit for related</button>
 
                     </div>
 
